# nile

./: .clang-tidy  .gitmodules  CMakeLists.txt  readme.md
nile/app/: CMakeLists.txt  app.cpp  assert.hpp  main.cpp  renderer.hpp  window.hpp
nile/core/: CMakeLists.txt  core.cpp  core.h
scripts/: env-macos.sh  format.sh  tidy.sh
